Final commit for 2.4.0 release